# astr

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  math.h
include/: entities.hpp  main.h  math.h  math.hpp
src/: entities.cpp  main.cpp  math.cpp
